# ChangeLog for media-libs/libsndfile
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libsndfile/ChangeLog,v 1.88 2009/03/04 13:59:42 loki_val Exp $

  04 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  libsndfile-1.0.18-r1.ebuild:
  Fix bug 261073, libtool incompatibility. Thanks to Gürkan Gür
  <seqizz@gmail.com> for reporting.

*libsndfile-1.0.18-r1 (03 Mar 2009)

  03 Mar 2009; Alexis Ballier <aballier@gentoo.org>
  +libsndfile-1.0.18-r1.ebuild:
  force disabling octave module which was automagic because it seems it
  installs files at bad locations (bug #260769), may fail to build (bug
  #260853) and to link (bug #260835).

  28 Feb 2009; Alexis Ballier <aballier@gentoo.org>
  libsndfile-1.0.17-r1.ebuild:
  fixup invalid configure argument (werror -> gcc-werror), bug #256882

*libsndfile-1.0.18 (28 Feb 2009)

  28 Feb 2009; Alexis Ballier <aballier@gentoo.org>
  +files/libsndfile-1.0.18-less_strict_tests.patch,
  +files/libsndfile-1.0.18-m4macro.patch, +libsndfile-1.0.18.ebuild:
  version bump

  21 Apr 2008; Mike Frysinger <vapier@gentoo.org>
  +files/libsndfile-1.0.17-autotools.patch, libsndfile-1.0.17-r1.ebuild:
  Fixup errors in autotool code caught by libtool-2.2 #218666 by Lars
  (Polynomial-C).

  14 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  libsndfile-1.0.17-r1.ebuild:
  Fix building with autoconf 2.62.

  17 Mar 2008; <ricmm@gentoo.org> libsndfile-1.0.17.ebuild:
  Drop to ~mips due to unstable deps

  22 Feb 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/libsndfile-1.0.17-dontbuild-tests-examples.patch,
  +files/libsndfile-1.0.17-regtests-need-sqlite.patch,
  libsndfile-1.0.17-r1.ebuild:
  Don't build tests and examples during standard make, this saves a few gcc/ld
  calls for most users. Don't build regtest if sqlite is disabled, rather than
  just removing it after the fact. Don't request old version of automake, as
  full eautoreconf is called.
