@@ -8,8 +8,10 @@ AUX libsndfile-1.0.18-m4macro.patch 482 RMD160 6ff4ae5bd60222053fb6b01701e748508
 DIST libsndfile-1.0.17+flac-1.1.3.patch.bz2 3127 RMD160 fc6e6f03069c1ad8ee43f600f6ac2aa6e97bb1f5 SHA1 10e0d19dfc8cf2a6bf499e0fa0d1ab17dca4c519 SHA256 2c8b6df283309061e8e9aaedd0bc20c7ebf75fa8ad4ed8b01f7bf04162206df1
 DIST libsndfile-1.0.17.tar.gz 819456 RMD160 ae93822a4c587dcdd7c70d043d2a38ed2fe3a188 SHA1 2f66798d596a15491fbd1191ded8125ed71ef411 SHA256 1792e4e60386b450ef8ec07c756e8f3ecfe96ebda7d0b09148da5f436d065ef2
 DIST libsndfile-1.0.18.tar.gz 923666 RMD160 15b19f4df1d8ced6c25e234258fb3d88fe3cd2ae SHA1 d0fb643dc5b1030cf769e06d1260c70320fc877e SHA256 c0821534a8510982d26b3085b148d9091dede53780733515eb49c99a65da293a
+DIST libsndfile-1.0.19.tar.gz 924368 RMD160 027d53e55b6d01c78aba31ed239fd2f0d2f752b5 SHA1 7cf8d3f032501642e36fecd8c899b09d3f7c986c SHA256 4b567a02e15bcae25fa1aeb3361b4e2cb8b2ce08e9b53faa81f77a34fb2b5419
 EBUILD libsndfile-1.0.17-r1.ebuild 1636 RMD160 a78a5df42476f4c3593a521042681d9625387065 SHA1 75555af9f30b35ec6d4d00d889a1e9175288dc97 SHA256 4d91ea3e66f601d93ae1647318428f03d6b2c2ec4f88fd2c19924e10958e1b43
 EBUILD libsndfile-1.0.18-r1.ebuild 1840 RMD160 ab097164d61d7308081b40fe24eb4ac5f6e0e901 SHA1 7356468c39f71427d0af9e099321822b40b1eb3a SHA256 e995368f7f66fc3e85562affd8a868c7f6628a3df1b3b7f8c4e099e4478f4484
 EBUILD libsndfile-1.0.18.ebuild 1769 RMD160 e039960cb9a6774bc67d1e826cf83d9d5e1a53de SHA1 7e3531fb9ce46e1adda240a41615832b5d76ddea SHA256 4b099a42e08ac6899d6fe4571893f371b3d46d48248fcd05703e3508ecb4751f
-MISC ChangeLog 13187 RMD160 c4c96f410a4630516d7ebde3e3951573e0ae1f34 SHA1 6647fdd6dff66885bc560ff5e8583baa5565406b SHA256 156e3e4c994dcf5eb2fefd68a43edbcce1dfe8f257b566ccbb1ae98f1f85acae
+EBUILD libsndfile-1.0.19.ebuild 1788 RMD160 f56bc795b211bfe3bf1171ebdd5c7a56bf167998 SHA1 f8f9ff3b232568b781697b2993e5d3a90201fa29 SHA256 d619917c7a01a12da64089ab5a30fd779965406bc03daf7f50f133a1c08e34d2
+MISC ChangeLog 13346 RMD160 cbf8005ed611f1939319814099b0ff70e8140c32 SHA1 edcb4245a3d0d2bd507e2ed9ccc77350e2c33da3 SHA256 f68728a80b38ff043856905d1c0fb73a7d22fa58d59d90eceb4db0a67e6fdd2c
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
